fix: Dark mode reloads

--- a/progress-tracker/src/style/App.css
+++ b/progress-tracker/src/style/App.css
@@ -6,6 +6,12 @@
   color: #61dafb;
 }
 
+body{
+  height: 100vh;
+  width: 100%;
+}
+
+
 .noselect {
   -webkit-touch-callout: none; /* iOS Safari */
   -webkit-user-select: none; /* Safari */
